<resources>
    <string name="app_name">S.R.Citas</string>
    <string name="label_login">Log in</string>
    <string name="label_email">Email</string>
    <string name="label_password">Passwword</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Register</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="label_name">Nombre completo</string>
    <string name="please_fill_your_data">Por favor introduce tus datos</string>
    <string name="registrer_appointment">Reservar cita</string>
    <string name="my_appointments">Mis citas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appoinment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_speciality">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_conf">Confirmar</string>
    <string name="label_doctor">Doctor</string>
    <string name="schedule_date">Fecha para la cita</string>
    <string name="time1">8.00</string>
    <string name="time2">8:30</string>
    <string name="time3">9:00</string>
    <string name="time4">9:30</string>
    <string name="time5">10:00</string>
    <string name="time6">10:30</string>
    <string name="time7">11:00</string>
    <string name="time8">11:30</string>
    <string name="time9">3:00</string>
    <string name="time10">3:30</string>
    <string name="time11">4:00</string>
    <string name="time12">4:30</string>
    <string name="time13">5:00</string>
    <string name="time14">5:30</string>
    <string name="time15">6:00</string>

    <string name="date_format">%1$s-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita médica %1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderán.</string>
    <string name="dialog_create_appointment_exit_positive_btn">Sí, salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">la descripción es demasiado corta</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="label_confirm_appointment_descrip">Descripción</string>
    <string name="label_confirm_appointment_specialty">Especialidad</string>
    <string name="label_confirm_appointment_type">Tipo de cita</string>
    <string name="label_confirm_appointment_doctor">Doctor</string>
    <string name="label_confirm_appointment_date">Fecha para la cita</string>
    <string name="label_confirm_appointment_time">Hora para la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialty">Ocurrio un problema al cargar las especialidades</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_loading_doctors">Ocurrió un problema al cargar los médicos</string>
    <string name="error_loading_hours">No se han podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha para ver sus horas disponibles</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
</resources>